# rust-jsonapi-poc

./: .env.dist  .gitignore  Cargo.toml  docker-compose.yml
migrations/2018-10-24-220158_rust_api/: down.sql  up.sql
src/: config.rs  db.rs  hero.rs  main.rs  schema.rs
src/japi/: Cargo.toml
src/japi/src/: api.rs  core.rs  lib.rs  model.rs
