[package]
name = "rust-api"
version = "0.1.0"
authors = ["Berelindis <romain.bellande@orange.fr>"]
edition = "2018"

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
diesel_codegen = { version = "*", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
dotenv = "0.10.1"
jsonapi = "*"
envy = "0.3.3"
japi = { path = "./src/japi" }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
